Fix overflow in tooltip

--- a/src/styles/components/Map.pcss
+++ b/src/styles/components/Map.pcss
@@ -26,6 +26,7 @@
 
         & .buckets {
           display: flex;
+          flex-wrap: wrap;
           justify-content: space-around;
           padding: 5px 0;
           flex: 1;
